Создать меню. [#469913]